--- a/styles/style.css
+++ b/styles/style.css
@@ -5,8 +5,8 @@ body{
 h1{
     color:white;
     text-align: center;
-    padding-bottom: 10rem;
-    padding-top: 25rem;
+    padding-bottom: 2rem;
+    padding-top: 15rem;
 }
 
 .entrada p{
@@ -20,25 +20,76 @@ h1{
    padding-top: 2rem;
    padding-left: 2rem;
 }
-.navegador{
-    display: inline flex;
-    align-content:space-between;
-    flex-direction: row;
-    
-    
+
+#navegador ul li {
+    background-color:white;
 }
-.listado-entrada{
-    list-style: none;
-    display: inline-flex;
-    
+
+#navegador ul {
+  list-style:none;
+  margin:0;
+  padding:0;
 }
-.listado-entrada li{
-    display: flex;
-    align-items: flex-end;
-    margin-left: 80px;
+
+#navegador ul a {
+  display:inline-block;
+  text-decoration:none;
+  font-weight:400;
+  font-size:15px;
+  padding:10px;
+  letter-spacing:1px;
 }
+
 .entrada{
-    height: 900px;
+    height: 500px;
     background-image: url("../images/landing.jpg");
     background-size: cover;
+}
+
+.music{
+    width: 50px;
+}
+.HD-icon{
+    width: 50px;
+}
+.stream{
+    width: 50px;
+}
+
+#boxes {
+    text-align: center;
+    margin: 0;
+
+}
+
+#boxes h3{
+    text-decoration: underline #00B172;
+    
+
+}
+
+#boxes h4{
+    
+    color:#00B172
+}
+
+#articles {
+    background-color: #00B172;
+    color:#fff;
+    padding-left: 2.5rem;
+}
+
+#articles h4{
+    
+
+}
+#articles h3{
+    text-decoration: underline #fff;
+    padding-top: 1rem;
+}
+
+#articles p {
+    text-align: left;
+    padding-right: 3rem;
+    word-spacing: 0.5rem;
 }
