--- a/styles/style.css
+++ b/styles/style.css
@@ -125,12 +125,11 @@ h1{
     display:none;
 }
 .logo-blanco{
-    width: 20rem;
-    image-rendering:crisp-edges;
-    object-position: 150px 50px ;
+    display: none;
 }
-@media (min-width:763px){
 
+
+@media (min-width:763px){
 
 #navegador{
  display: inline flex;
@@ -139,8 +138,10 @@ h1{
 
 }
 #navegador ul{
-    padding-left: 30rem;
+    padding-left: 80rem;
     padding-top: 2rem;
+    padding-right: 0;
+
 }
 #articles h4{
     display: flex;
@@ -157,7 +158,8 @@ h1{
     align-items: flex-start;
     text-align: left;
     padding-left: 3rem;
-    padding-right: 50rem;
+    padding-right:25rem ;
+
 }
 
 #boxes p {
@@ -184,14 +186,25 @@ h1{
     flex-direction: row;
 }
 
-#articles {
+#articles{
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
+    align-content: space-between;
     align-items: center;
-    align-content: center;
 }
 .logo-blanco{
-    width: 50px;
-
+    display: flex;
+    width: 80px;
+    padding-left: 15rem;
+}
+.app{
+    display: flex;
+    width: 300px;
+    padding-left: 10rem;
+    padding-right: 20rem ;
+    
+}
+.todos{
+    text-align: right;
 }
 }
